# OTUS_homework_2

./: .gitignore  CMakeLists.txt  filter_test.cpp  lib.cpp  lib.hpp  main.cpp
.github/workflows/: realease.yml
